--- a/.env-sample
+++ b/.env-sample
@@ -4,3 +4,6 @@ POSTGRESQL_PORT=<这里填写Postgresql的端口号，示例：5432>
 POSTGRESQL_USER=<这里填写Postgresql的账户名，示例：user1>
 POSTGRESQL_PASSWORD=<这里填写Postgresql的密码，示例：P@ssw0rd>
 POSTGRESQL_DB=<这里填写Postgresql的数据库，示例：aidb>
+LM_STUDIO_URL=<这里填写LM_STUDIO的连接地址，示例：http://127.0.0.1:1234/v1>
+LM_STUDIO_MODEL=<这里填写LM_STUDIO的模型，示例：google/gemma-3-12b>
+SD_WEB_UI_URL=<这里填写Stable Diffusion WebUI的图生图API地址，示例：http://127.0.0.1:7860/sdapi/v1/img2img>
