更新说明文档

--- a/.env-sample
+++ b/.env-sample
@@ -7,3 +7,4 @@ POSTGRESQL_DB=<这里填写Postgresql的数据库，示例：aidb>
 LM_STUDIO_URL=<这里填写LM_STUDIO的连接地址，示例：http://127.0.0.1:1234/v1>
 LM_STUDIO_MODEL=<这里填写LM_STUDIO的模型，示例：google/gemma-3-12b>
 SD_WEB_UI_URL=<这里填写Stable Diffusion WebUI的图生图API地址，示例：http://127.0.0.1:7860/sdapi/v1/img2img>
+SCAN_PATHS=<这里填写需要建立图库的文件夹，多个文件夹使用逗号分隔，可以使用相对/绝对路径。示例：resources/dataset,D:\image-searcher\resources\test_dataset>
